# Accelerated-Machine-Learning

./: .gitignore  CMakeLists.txt  build.bat  build.sh  main.c  o.txt  readme.md  tags
acceleration/: oclapi.c  oclapi.h
acceleration/kernels/: static_kernels_src.in.h
acceleration/kernels/include/: matutil.h
acceleration/kernels/src/: mat.cl
docs/: mat_usage.md  ml_protocol.md  oclapi_usage.md
matrix/: mat.c  mat.h  mat_ex.h
ml/: layers.c  machine.c  ml.c  ml.h  optimizer.c
ml/.src/: mlsrc.c  mlsrc.h
